--- a/assets/css/_post-content.scss
+++ b/assets/css/_post-content.scss
@@ -12,8 +12,11 @@ $colorCodeBlockText: $colorGreyDark;
     position: absolute;
     top: 0;
     bottom: 0;
-    width: $baseUnit;
+    width: $baseUnit/2;
     z-index: 100;
+    @include media($breakTablet) {
+      width: $baseUnit;
+    }
   }
 
   &:before {
